syntax = "proto3";

package search.api.v1;

option go_package = "github.com/ryanreadbooks/whimer/search/api/v1";

message NoteTag {
  string id = 1;
  string name = 2;
  int64 ctime = 3;
}
