syntax = "proto3";

package search.api.v1;

import "v1/note_tag.proto";

option go_package = "github.com/ryanreadbooks/whimer/search/api/v1";

message SearchNoteTagsRequest {
  string text = 1;
  int32 page = 2;
  int32 count = 3;
}

message SearchNoteTagsResponse {
  repeated NoteTag items = 1;
  int64 total = 2;
}

// 查询服务
service SearchService {
  rpc SearchNoteTags(SearchNoteTagsRequest) returns (SearchNoteTagsResponse);
}
